--- a/app/views/ftf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/ftf/_includes/activity-list_task-section_agreement.html
@@ -1,11 +1,11 @@
 <li>
+
+    {% if (data['agree'] == "01") %}
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
     </h2>
+
     <ul class="govuk-task-list">
-
-<!-- TASK 3-1 -->
-
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <div>Read agreement</div>
@@ -14,9 +14,6 @@
           Cannot start yet
         </div>
       </li>
-
-
-<!-- TASK 3-2 -->
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -27,8 +24,43 @@
         </div>
       </li>
 
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Sign and accept agreement</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
 
-<!-- TASK 3-3 -->
+    {% elif (data['agree'] == "02a") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+    </h2>
+
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -39,4 +71,149 @@
         </div>
       </li>
     </ul>
+
+    {% elif (data['agree'] == "02b") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+    </h2>
+
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Sign and accept agreement</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['agree'] == "02c") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+    </h2>
+
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--light-blue">
+            In progress
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Sign and accept agreement</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['agree'] == "02d") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+    </h2>
+
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['agree'] == "03") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">3. </span> Sign agreement
+    </h2>
+
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Read terms and conditions</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Sign and accept agreement</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+    </ul>
+
+    {% endif %}
+      
   </li>
