--- a/app/views/ftf/_includes/activity-list_task-section_claim-02.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-02.html
@@ -2,11 +2,10 @@
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">5. </span> Submit second claim
     </h2>
+
+
+    {% if (data['claim-02'] == "01") %} 
     <ul class="govuk-task-list">
-
-
-<!-- TASK 5-1 -->
-
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <div>Download claim form</div>
@@ -15,9 +14,6 @@
           Cannot start yet
         </div>
       </li>
-
-
-<!-- TASK 5-2 -->
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -28,8 +24,37 @@
         </div>
       </li>
 
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Submit claim</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
 
-<!-- TASK 5-3 -->      
+    {% elif (data['claim-02'] == "02a") %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Upload claim form and evidence</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -40,4 +65,133 @@
         </div>
       </li>
     </ul>
+
+    {% elif (data['claim-02'] == "02b") %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Submit claim</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['claim-02'] == "02c") %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--light-blue">
+            In progress
+          </strong>
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Submit claim</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['claim-02'] == "02d") %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not started yet
+          </strong>
+        </div>
+      </li>
+    </ul>
+
+    {% elif (data['claim-02'] == "03") %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+            Completed
+        </div>
+      </li>
+    </ul>
+
+    {% endif %}
+
   </li>
