--- a/app/views/ftf/_includes/activity-list_task-section_claim-03.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-03.html
@@ -1,43 +1,197 @@
 <li>
-    <h2 class="govuk-prototype-kit-task-list__section">
-      <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
-    </h2>
-    <ul class="govuk-task-list">
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">6. </span> Submit third claim
+  </h2>
 
 
-<!-- TASK 6-1 -->
+  {% if (data['claim-03'] == "01") %} 
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Download claim form</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
 
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <div>Download claim form</div>
-        </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
-        </div>
-      </li>
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Upload claim form and evidence</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
 
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit claim</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
 
-<!-- TASK 6-2 -->
+  {% elif (data['claim-03'] == "02a") %}
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not started yet
+        </strong>
+      </div>
+    </li>
 
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <div>Upload claim form and evidence</div>
-        </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
-        </div>
-      </li>
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Upload claim form and evidence</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
 
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit claim</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
 
-<!-- TASK 6-3 -->      
+  {% elif (data['claim-03'] == "02b") %}
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
 
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <div>Submit claim</div>
-        </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
-        </div>
-      </li>
-    </ul>
-  </li>
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not started yet
+        </strong>
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit claim</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
+
+  {% elif (data['claim-03'] == "02c") %}
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        <strong class="govuk-tag govuk-tag--light-blue">
+          In progress
+        </strong>
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit claim</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
+
+  {% elif (data['claim-03'] == "02d") %}
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not started yet
+        </strong>
+      </div>
+    </li>
+  </ul>
+
+  {% elif (data['claim-03'] == "03") %}
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Download claim form</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Upload claim form and evidence</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Submit claim</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+      </div>
+    </li>
+  </ul>
+
+  {% endif %}
+
+</li>
