--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -1,13 +1,79 @@
 <li>
+
+    {% if (data['eoi'] == "01") %}  <!-- EOI Scenario 1 -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
     </h2>
+
     <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        Completed
+      </div>
+    </li>
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-4-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          Not yet started
+        </strong>
+      </div>
+    </li>
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Register your interest</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
 
+  {% elif (data['eoi'] == "02") %}  <!-- EOI Scenario 2 -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+  </h2>
 
-<!-- TASK 1-1 -->
+  <ul class="govuk-task-list">
+  <li class="govuk-task-list__item govuk-task-list__item--with-link">
+    <div class="govuk-task-list__name-and-hint">
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+    </div>
+    <div class="govuk-task-list__status" id="application-details-1-status">
+      Completed
+    </div>
+  </li>
+  <li class="govuk-task-list__item govuk-task-list__item--with-link">
+    <div class="govuk-task-list__name-and-hint">
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+    </div>
+    <div class="govuk-task-list__status" id="application-details-4-status">
+      <strong class="govuk-tag govuk-tag--light-blue">
+        In progress
+      </strong>
+    </div>
+  </li>
+  <li class="govuk-task-list__item">
+    <div class="govuk-task-list__name-and-hint">
+      <div>Register your interest</div>
+    </div>
+    <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
+      Cannot start yet
+    </div>
+  </li>
+</ul>
 
-      {% if (data['01-01'] == "complete") %}
+      {% elif (data['eoi'] == "03a") %}  <!-- EOI Scenario 3 -->
+      <h2 class="govuk-prototype-kit-task-list__section">
+        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+      </h2>
+
+      <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
@@ -16,41 +82,6 @@
           Completed
         </div>
       </li>
-      {% else %}
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
-        </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
-          Completed
-        </div>
-      </li>
-      {% endif %}
-
-
-<!-- TASK 1-2 -->
-
-      {% if (data['01-01'] == "complete") and (data['01-02'] == "ready") %}
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="index?01-02=progress" aria-describedby="application-details-2-status">Check your business and personal details</a>
-        </div>
-        <div class="govuk-task-list__status" id="application-details-4-status">
-          <strong class="govuk-tag govuk-tag--blue">
-            Not yet started
-          </strong>
-        </div>
-      </li>
-      {% elif (data['01-01'] == "complete") and (data['01-02'] == "progess") %}
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="index?01-02=complete" aria-describedby="application-details-2-status">Check your business and personal details</a>
-        </div>
-        <div class="govuk-task-list__status" id="application-details-1-status">
-          In progress
-        </div>
-      </li>
-      {% elif (data['01-01'] == "complete") and (data['01-02'] == "complete") %}
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
@@ -59,34 +90,6 @@
           Completed
         </div>
       </li>
-      {% else %}
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="index?01-02=progress" aria-describedby="application-details-2-status">Check your business and personal details</a>
-        </div>
-        <div class="govuk-task-list__status" id="application-details-4-status">
-          <strong class="govuk-tag govuk-tag--blue">
-            Not yet started
-          </strong>
-        </div>
-      </li>
-      {% endif %}
-
-
-<!-- TASK 1-3 -->
-
-      {% if (data['01-02'] == "complete") and (data['01-03'] == "ready") %}
-      <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="index?01-03=complete" aria-describedby="application-details-2-status">Register your interest</a>
-        </div>
-        <div class="govuk-task-list__status" id="application-details-4-status">
-            <strong class="govuk-tag govuk-tag--blue">
-              Not yet started
-            </strong>
-        </div>
-      </li>
-      {% elif (data['01-02'] == "complete") and (data['01-03'] == "complete") %}
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
@@ -95,19 +98,48 @@
           Completed
         </div>
       </li>
-      {% else %}
-      <li class="govuk-task-list__item">
+    </ul>
+
+      {% elif (data['eoi'] == "03b") %}  <!-- EOI Scenario 4 -->
+      <h2 class="govuk-prototype-kit-task-list__section">
+        <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+      </h2>
+      
+      <ul class="govuk-task-list">
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <div>Register your interest</div>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
         </div>
       </li>
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+        </div>
+      </li>
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Completed
+        </div>
+      </li>
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Expression of interest outcome</a>
+        </div>
+        <div class="govuk-task-list__status" id="application-details-1-status">
+          Accepted
+        </div>
+      </li>
+    </ul>
+
       {% endif %}
 
-
-<!-- TASK 1-4 -->
-
-    </ul>
   </li>
