--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -140,6 +140,46 @@
       </li>
     </ul>
 
+    {% elif (data['eoi'] == "03c") %}
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+    </h2>
+    
+    <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-1-status">Check eligibility and scoring</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        Completed
+      </div>
+    </li>
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Check your business and personal details</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        Completed
+      </div>
+    </li>
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Register your interest</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        Completed
+      </div>
+    </li>
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Expression of interest outcome</a>
+      </div>
+      <div class="govuk-task-list__status" id="application-details-1-status">
+        Not accepted
+      </div>
+    </li>
+  </ul>
+
       {% endif %}
 
   </li>
