--- a/app/views/ftf/activity-list/v3-0/index.html
+++ b/app/views/ftf/activity-list/v3-0/index.html
@@ -20,9 +20,9 @@ Water Management Grant - Round 3
 <h1 class="govuk-heading-xl">{{ data['ftf-grant-name'] }}</h1>
 
 
-
+<span class="content-section">
 {% include "../../_includes/activity-list_status-block.html" %}
-
+</span>
 
 
 
