--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,9 +41,60 @@
 <hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
 
 
-
     <h2 class="govuk-heading-l">High-fidelity design</h2>
 
+    <span class="content-section">    
+      <h3 class="govuk-heading-m">Activity List</h3>
+  
+  
+      <h4 class="govuk-heading-s">FTF scenarios</h4>
+      <p class="govuk-body">EOI phase:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="/ftf/activity-list/v3-0/index?status=01a&eoi=01&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI in progress</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=01b&eoi=03a&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">EOI under review</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=01c&eoi=03c&apply=0&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">EOI not accepted</a></li>
+        </ul>
+
+        <p class="govuk-body">Application phase:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="/ftf/activity-list/v3-0/index?status=02a&eoi=03b&apply=02a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">You can start application (EOI accepted)</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=02b&eoi=03b&apply=02c&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application in progress</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application under review</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=02d&eoi=03c&apply=03c&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">Application unsuccessful</a></li>
+        </ul>
+
+        <p class="govuk-body">Agreement phase:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="/ftf/activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0" target="_blank">Read and sign your grant funding agreement</a></li>
+        </ul>
+
+        <p class="govuk-body">Claim phase:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="/ftf/activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02a&claim-02=01&claim-03=01" target="_blank">You can submit your first claim</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=05&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=02a&claim-03=01" target="_blank">You can submit your second claim</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=06&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=02a" target="_blank">You can submit your third claim</a></li>
+        </ul>
+  <br>
+  
+  <h4 class="govuk-heading-s">Outcome screens</h4>
+  <p class="govuk-body">EOI phase:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/eoi/v2-0/outcome-accepted" target="_blank">EOI accepted</a></li>
+    <li><a href="/ftf/eoi/v2-0/outcome-not-accepted" target="_blank">EOI not accepted</a></li>
+  </ul>
+  <p class="govuk-body">Application phase:</p>
+  <ul class="govuk-list govuk-list--bullet">
+    <li><a href="/ftf/application/v3-0/outcome-successful" target="_blank">Application successful</a></li>
+    <li><a href="/ftf/application/v3-0/outcome-unsuccessful" target="_blank">Application unsuccessful</a></li>
+  </ul>
+
+  <hr style="margin: 40px 0; width: 70%;">
+  
+  
+  
+  
+  
+  </span>
     <span class="content-section">    
     <h3 class="govuk-heading-m">Expression of Interest</h3>
 
@@ -64,7 +115,7 @@
 <br>
 
 
-<hr id="service-design" style="margin: 40px 0; width: 70%;">
+<hr style="margin: 40px 0; width: 70%;">
 
 
 
@@ -104,7 +155,7 @@
     </span>
 
 
-    <hr id="service-design" style="margin: 40px 0; width: 70%;">
+    <hr style="margin: 40px 0; width: 70%;">
 
 
 
@@ -148,7 +199,7 @@
 
 
 
-<hr id="service-design" style="margin: 40px 0; width: 70%;">
+<hr style="margin: 40px 0; width: 70%;">
 
 
 <h3 class="govuk-heading-m">Claim</h3>
@@ -181,7 +232,7 @@
 </p>
 
 
-<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
+<hr id="low-fidelity-design" style="margin: 40px 0; height: 3px;">
 
 <h2 class="govuk-heading-l">Low-fidelity design</h2>
 
@@ -191,7 +242,7 @@
 <p class="govuk-body">E2E flow diagram: <a href="https://app.mural.co/t/1010defra0589/m/1010defra0589/1682675098512/bad82167914a454cbcf8a9378b175be62b00ca51?wid=7-1682675140064" target="_blank">E2E flow v1.0 - Mural (opens in new tab)</a></p>
 </span>
 
-<hr id="high-fidelity-design" style="margin: 40px 0; height: 3px;">
+<hr id="service-design" style="margin: 40px 0; height: 3px;">
 
 <h2 class="govuk-heading-l">Service design</h2>
 
